# netbox-sync-main

./: ARCHITECTURE_COMPARISON.md  ARCHITECTURE_GUIDE.md  DELL_ECS_IMPLEMENTATION_ROADMAP.md  DELL_ECS_IMPROVED_EXAMPLE.py  DOCUMENTATION_INDEX.md  README.md  README_ENHANCEMENT_DOCS.md  pyproject.toml
module/: __init__.py
module/common/: __init__.py  config.py
module/config/: base.py  group.py  option.py
module/sources/common/: permitted_subnets.py
module/sources/dell_ecs/: __init__.py  config.py
module/sources/vmware/: config.py  connection.py
netbox-sync-main/: Dockerfile  README.md  netbox-sync.py  requirements.txt  settings-example.ini
netbox-sync-main/.github/workflows/: docker-image.yml
netbox-sync-main/module/common/: cli_parser.py  logging.py  misc.py  support.py
netbox-sync-main/module/config/: __init__.py  file_output.py  files.py  formatter.py  parser.py
netbox-sync-main/module/netbox/: __init__.py  config.py  connection.py  inventory.py  manufacturer_mapping.py  object_classes.py
netbox-sync-main/module/sources/: __init__.py
netbox-sync-main/module/sources/check_redfish/: config.py  import_inventory.py
netbox-sync-main/module/sources/common/: config.py  handle_vlan.py  source_base.py
netbox-sync-main/module/sources/dell_ecs/: connection.py
netbox-sync-main/scripts/: publi.sh
scripts/: set_version.sh
